Corrected webpage SOP segments

--- a/template/csv-not-found.html
+++ b/template/csv-not-found.html
@@ -32,7 +32,7 @@
     <nav aria-label="primary-navigation">
         <h2>Overview</h2>
         <ul>
-            <li><a href="SOP">Standard Operational Procedure (SOP)</a></li>
+            <li><a href="#SOP">Standard Operational Procedure (SOP)</a></li>
             <li><a href="#Datasubmission">Data Submission</a></li>
             <li><a href="#Explanation">Data Submission Explanation</a></li>
         </ul>
@@ -47,9 +47,13 @@
 
 
             <section id="SOP">
+                <h2>Standard Operational Procedure (SOP)</h2>
                 <br>
                 <p> The EHI project uses Opentrons OT-2 to perform part of the laboratory work when processing samples to send for sequencing. Underneath you can find submission form to generate custom EHI protocols, which fits the users need in terms of number of samples processed and what labware used for the samples. To allow anyone access to run our laboratory automation pipeline, you can check out the <a href="static\SOPs\SOP_Template_V1.1.pdf">Standard Operational Procedure (SOP)</a>, where you can find a discription of the work protocol, warning, and list of consumables. Remember, all work might require <strong>fine tuning</strong> localy due to minor variation.
                 </p>
+
+                <br><br>
+
             </section>
 
 
@@ -193,7 +197,7 @@
     <hr>
 
     <footer>
-    <p>&lt;&lt;&lt;&nbsp;&copy;Jonas Greve Lauritsen & The Alberdi Group &nbsp;&gt;&gt;&gt;</p>
+    <p>&lt;&lt;&lt;&nbsp;&copy;Jonas Greve Lauritsen & The Alberdi Group - Last Updated: 11/08-2025 &nbsp;&gt;&gt;&gt;</p>
     <a href="/">Return to Main page</a>
     <br>
     <p><a href="#">Return to top</a></p>
